Log notification launch id decode status

We have ~1% invalid launch ids that are invalid, which needs more investigation.

Bug: 839942, 734095
Change-Id: Ibebb6beeebb6fe4200d49a728dde56d979a795cc
Reviewed-on: https://chromium-review.googlesource.com/1068655
Commit-Queue: Xi Cheng <chengx@chromium.org>
Reviewed-by: Peter Beverloo <peter@chromium.org>
Reviewed-by: Finnur Thorarinsson <finnur@chromium.org>
Reviewed-by: Brian White <bcwhite@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561249}